fix files overflow on client side

--- a/client/src/app/course/topic-content/topic-content.component.scss
+++ b/client/src/app/course/topic-content/topic-content.component.scss
@@ -2,4 +2,8 @@
   border: 2px dashed #cccccc;
   text-align: center;
   cursor: pointer;
+
+  &.drag-over {
+    border-color: #007bff;
+  }
 }
